<resources>
    <string name="app_name" translatable="false">My Time</string>
    <string name="back" translatable="false">←</string>
    <string name="forward" translatable="false">→</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wen">WEN</string>
    <string name="thu">THU</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="sun">SUN</string>
    <string name="write_event_name">Write event name</string>
    <string name="date">Date:</string>
    <string name="time">Set Time</string>
    <string name="deleteEvents">Delete Events</string>
    <string name="sure">Are you sure? Your events will be deleted with no restore option!</string>
    <string name="save">Save</string>
    <string name="how_many_hours_before_the_event_nto_send_you_a_notification">How many hours before the\nevent to send you a notification</string>
    <string name="write_event_equipment">Write event gear</string>
    <string name="write_event_price">Write event price</string>
</resources>