<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.samsung.mytime.EventEditActivity">

    <EditText
        android:id="@+id/eventNameET"
        android:layout_width="263dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_title_icon"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="@string/write_event_name"
        android:inputType="text"
        android:paddingStart="6dp"
        android:paddingEnd="6dp"
        android:text=""
        android:textColor="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/eventPriceET"
        android:layout_width="198dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_money_icon"
        android:drawablePadding="5dp"
        android:ems="4"
        android:hint="@string/write_event_price"
        android:inputType="number"
        android:paddingStart="6dp"
        android:paddingEnd="6dp"
        android:text=""
        android:textColor="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/eventEquipmentET"
        android:layout_width="303dp"
        android:layout_height="66dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_check_box_icon"
        android:drawablePadding="5dp"
        android:ems="15"
        android:hint="@string/write_event_equipment"
        android:inputType="text"
        android:paddingStart="6dp"
        android:paddingEnd="6dp"
        android:text=""
        android:textColor="@color/black"
        android:textSize="20sp" />
    <TextView
        android:id="@+id/eventDateTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textColor="@color/black"/>
    <Button
        android:id="@+id/eventTimeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/custom_button"
        android:paddingStart="6dp"
        android:paddingEnd="6dp"
        android:text="@string/time"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:onClick="popOutTimePicker"/>

    <EditText
        android:id="@+id/hours_count"
        android:layout_width="335dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_alarm_icon"
        android:drawablePadding="5dp"
        android:ems="4"
        android:hint="@string/how_many_hours_before_the_event_nto_send_you_a_notification"
        android:inputType="number"
        android:maxLength="1"
        android:paddingStart="6dp"
        android:paddingEnd="6dp"
        android:text=""
        android:textColor="@color/black"
        android:textSize="20sp" />

    <Button
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:background="@drawable/custom_button"
        android:paddingStart="6dp"
        android:paddingEnd="6dp"
        android:textColor="@color/blue"
        android:textStyle="bold"
        android:onClick="saveEventAction"
        android:layout_gravity="center"
        android:textSize="20sp"/>

</LinearLayout>